<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OneHundredAndTen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bidNextBtn">Next</string>
    <string name="regularBtn">Individual</string>
    <string name="teamsBtn">Teams</string>
    <string name="mainText1">Welcome to the 110 score keeper app</string>
    <string name="mainText2">Are you playing teams or individual 110?</string>
    <string name="imageDescCardSuits">Card suits</string>
    <string name="nextStepCreatePlayerBtn">Next  step</string>
    <string name="addCreatePlayersBtn">Add</string>
    <string name="hintCreatePlayersTextBox">Name...</string>
    <string name="keepScoresDoneBtn">Continue</string>
</resources>
