<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="1"
    android:rowCount="5"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainText1"
        android:id="@+id/textViewMain1"
        android:layout_row="0"
        android:layout_column="0"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:textAlignment="center"/>
    <ImageView
        android:layout_width="269dp"
        android:layout_height="378dp"
        android:id="@+id/imageViewMain"
        android:layout_row="1"
        android:layout_column="0"
        android:src="@drawable/suits"
        android:contentDescription="@string/imageDescCardSuits"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainText2"
        android:id="@+id/textViewMain2"
        android:layout_row="2"
        android:layout_column="0"
        android:textSize="25sp"
        android:layout_gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teamsBtn"
        android:id="@+id/teamsGameButton"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_marginLeft="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regularBtn"
        android:id="@+id/startGameButton"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_marginRight="50dp" />

</GridLayout>
