<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CreatePlayersLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:orientation="horizontal">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/playerName"
        android:hint="@string/hintCreatePlayersTextBox"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@android:id/list"
        android:layout_alignEnd="@android:id/list"
        android:layout_marginRight="65dp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addCreatePlayersBtn"
        android:id="@+id/addPlayer"
        android:layout_below="@+id/playerName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="?android:attr/buttonStyleSmall" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextStepCreatePlayerBtn"
        android:id="@+id/doneButton"
        android:layout_alignTop="@+id/addPlayer"
        android:layout_alignRight="@+id/playerName"
        android:layout_alignEnd="@+id/playerName" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@android:id/list"
        android:headerDividersEnabled="true"
        android:divider="#FFCC00"
        android:dividerHeight="2dp"
        android:layout_below="@+id/addPlayer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/infoButton"
        android:layout_alignBottom="@+id/playerName"
        android:layout_toRightOf="@+id/doneButton"
        android:layout_toEndOf="@+id/doneButton"
        android:src="@android:drawable/ic_dialog_info"/>

</RelativeLayout>